--- a/my-app/src/stylesheets/band-mists-of-avery.css
+++ b/my-app/src/stylesheets/band-mists-of-avery.css
@@ -1,4 +1,4 @@
-#band-body {
+#mists-of-avery-band-section {
     position: absolute;
     top: 10%;
     left: 0;
